<?xml version="1.0"?>
<package>
	<name>uaf01_jackal</name>
	<version>0.0.0</version>
	<description>Customizations for the UAF01 Jackal</description>
	<maintainer email="code@clearpathrobotics.com">Clearpath Team</maintainer>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<run_depend>husky_bringup</run_depend>
	<run_depend>husky_description</run_depend>
</package>
